# pytorch_shearlets

./: README.md  pyproject.toml
examples/: test.ipynb
pytorch_shearlets/: filters.py  shearlets.py  utils.py
tests/: test_shearlets.py
