[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-shearlets"
version = "0.0.1"
authors = [
  { name="Jonathan Peck", email="jonathan.peck@ugent.be" },
]
description = "2D Shearlet Transforms in PyTorch"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pyshearlab@git+https://github.com/stefanloock/pyshearlab"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.metadata]
allow-direct-references = true
